[gd_scene load_steps=2 format=3 uid="uid://bj2yvoiaaj3v3"]

[ext_resource type="Script" path="res://scenes/interaction/interact_area.gd" id="1_1hsnh"]

[node name="InteractArea" type="Area2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_1hsnh")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
